Ajout de l'edition auteur / livre depuis l'affichage auteur / livre dans l'admin

--- a/template/auteur.html
+++ b/template/auteur.html
@@ -3,6 +3,9 @@
     <div class="col-lg-8">
         <h2>Biographie</h2>
     </div>
+    <div class="col-lg-4">
+        %editbutton%
+    </div>
 </div>
 <div class="row">
     <div class="col-lg-8">
