--- a/template/livre.html
+++ b/template/livre.html
@@ -8,6 +8,11 @@
             Ce livre à été enregistré le : <i>%dateCreated%</i>
         </p>
     </div>
+    <div class="col-lg-4">
+        %editbutton%
+    </div>
+</div>
+<div class="row">
     <div class="col-lg-8">
         %resume%
     </div>
