--- a/template/formAuthor.html
+++ b/template/formAuthor.html
@@ -5,7 +5,7 @@
     </div>
     <div class="form-group row">
         <label for="prenom" class="col-lg-3">Prénom</label>
-        <input type="text" name="prenom" id="prenom" class="col-lg-9" value="%nom%" />
+        <input type="text" name="prenom" id="prenom" class="col-lg-9" value="%prenom%" />
     </div>
     <div class="form-group row">
         <label for="bio" class="col-lg-3">Biographie</label>
