--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,26 @@
 .listLivreGris{
     background-color:#eee;
 }
+
+.pagination-visible{
+    visibility: visible;
+    display: block;
+}
+
+.pagination-hidden{
+    visibility: hidden;
+    display: none;
+}
+
+.pagination-items{
+    font-weight: bold;
+    color: #005cbf;
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+.pagination-items-selected{
+    font-weight: normal;
+    color: #005cbf;
+    text-decoration: none;
+}
