changemnt de nom table livre en media

--- a/template/form.html
+++ b/template/form.html
@@ -7,7 +7,7 @@
         <label for="resume" class="col-lg-3">Résumé</label>
         <textarea name="resume" id="resume" class="col-lg-9" rows="10" cols="150">%resume%</textarea>
     </div>
-    <input type="hidden" name="idLivre" id="idLivre" value="%idLivre%">
+    <input type="hidden" name="idMedia" id="idMedia" value="%idMedia%">
     <input type="hidden" name="idUtilisateur" id="idUtilisateur" value="%idUtilisateur%">
     <button type="submit" name="submitAddBook" id="submitAddBook" class="btn btn-success" value="Valider">Valider</button>
     <a href="index.php?action=list">
