mise à jour de la médiathèque

--- a/template/form.html
+++ b/template/form.html
@@ -7,6 +7,10 @@
         <label for="resume" class="col-lg-3">Résumé</label>
         <textarea name="resume" id="resume" class="col-lg-9" rows="10" cols="150">%resume%</textarea>
     </div>
+    <div class="form-group-row">
+        <label for="categorie" class="col-lg-3">Catégorie</label>
+        %listeCat%
+    </div>
     <input type="hidden" name="idMedia" id="idMedia" value="%idMedia%">
     <input type="hidden" name="idUtilisateur" id="idUtilisateur" value="%idUtilisateur%">
     <button type="submit" name="submitAddBook" id="submitAddBook" class="btn btn-success" value="Valider">Valider</button>
