--- a/template/media.html
+++ b/template/media.html
@@ -1,8 +1,13 @@
 <h1>%titre%</h1>
 <div class="row">
     <div class="col-lg-4">
+        <h2>Auteur(s) :</h2>
         <p>
-            De %auteur%<br />
+            %auteur%<br />
+        </p>
+        <h2>Catégorie(s) :</h2>
+        <p>
+            %categorie%
         </p>
         <p>
             Ce media à été enregistré le : <i>%dateCreated%</i>
