--- a/template/categorieMedia.html
+++ b/template/categorieMedia.html
@@ -1,13 +1,13 @@
 <form method="post">
     <div class="form-group row">
-        <label for="idAuteur" class="col-lg-3">Auteur</label>
-        %listeAuteur%
+        <label for="idCategorie" class="col-lg-3">Catégorie</label>
+        %listeCategorie%
     </div>
     <div class="form-group row">
         <label for="idMedia" class="col-lg-3">Média</label>
         %listeMedia%
     </div>
-    <button type="submit" name="submitAddLinkAuth" id="submitAddLinkAuth" class="btn btn-success" value="Valider">
+    <button type="submit" name="submitAddLinkCat" id="submitAddLinkCat" class="btn btn-success" value="Valider">
         Valider
     </button>
     <a href="index.php?action=authorList">
